# MaNo

./: LICENSE  README.md  init_base_model.py  main.py  pyproject.toml  requirements.txt  test.ipynb
algs/: base_alg.py  mano.py  utils.py
architectures/: utils.py
bash/: init_base_model.sh  mano.sh
bash_dev/: init_base_model.sh  mano.sh
data/: breeds.py  cifar10.py  cifar100.py  domain_net.py  imagenet.py  office_home.py  pacs.py  tinyimagenet.py  tools.py  utils.py  wilds_rr1.py
data/breeds_utils/: README.md  breeds_helpers.py  folder.py
data_dev/: cifar10.py  office_home.py  utils.py  wilds_rr1.py
data_dev/breeds_utils/: helpers.py
evaluation/: main.py
examples/: plots.ipynb
experiments/: evaluation.py  train.py
models/: resnet.py  wrn.py
pretraining/: train.py
robustness1/: README.md  __init__.py  attack_steps.py  attacker.py  data_augmentation.py  datasets.py  defaults.py  main.py  model_utils.py  train.py
robustness1/tools/: openimgs_helpers.py
src/mano/: mano.py
src/mano/data/: pacs.py
